kubernetes/apps/whoami/ingress.yaml
# test example -> curl -v https://whoami.yuriy-lab.cloud --resolve whoami.yuriy-lab.cloud:443:192.168.0.XXX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.tech-hub.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
